<resources>
    <string name="app_name">Yummy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_delicious_food_from_the_best_delivery_n_brand">Order delicious food from the best delivery <br>brand</br></string>
    <string name="good_food_only">Good food only</string>
    <string name="snacks_and_drinks">Snacks, drinks &amp; essentials</string>
    <string name="need_it_now">Need it now? No worries. Shop from a \n
    section of everyday products delivered.</string>
    <string name="get_everything_only">Get everything in 1 order!</string>
    <string name="order_from">Order from different restaurants &amp; shops and \nhave everything delivered in a single order!</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="title_sign_up">Sign up</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hintpassword">Password</string>
    <string name="sign_up_as_an_admin">Sign up as an Admin</string>
    <string name="sign_up_personal">Sign up Personal</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="mssg_loading">Loading</string>
    <string name="creating_account">Creating Profile</string>
    <string name="mssg_creating_your_account">Creating your account</string>
    <string name="loading_your_fun_experience">Loading your Fun Experience</string>
    <string name="please_wait_dots">Please wait...</string>
    <string name="uploading_products">Uploading Products</string>
    <string name="signing_out">Signing out</string>
    <string name="getting_latest_product">Getting Latest Products</string>
    <string name="getting_product">Getting Products</string>
    <string name="adding_product">Adding Products</string>
    <string name="get_product_details">Getting Product Details</string>
    <string name="_autofilled">Your details has been autofilled</string>
    <string name="mssg_continue">Continue</string>
    <string name="proceed">Proceed</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="action_back">Back</string>
    <string name="hamburger_ic">hambuger_ic</string>
    <string name="yummy">Yummy</string>
    <string name="login_to_your_naccount">Login to your \naccount</string>
    <string name="please_sign_in_to_your_account">Please sign in to your account</string>
    <string name="email_address">Email Address</string>
    <string name="enter_email_here">Enter Email Here</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="separator">separator</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="register">Register</string>
    <string name="web_client_id">834594835811-deg04tekm874csie26f7uokllcd6gcv5.apps.googleusercontent.com</string>
    <string name="web_application_client_id">304911208533-iksp5b9qqt94k0teioide6qm9pfbco2k.apps.googleusercontent.com</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_coming_soon">Coming Soon...</string>
    <string name="mssg_coming_soon">Update your app regularly to get the latest features.</string>
    <string name="dashboard">DashBoard</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="add_new_products">Add New Products</string>
    <string name="add_products">Add Products</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="enter_price">Enter price</string>
    <string name="the_selected_image">The Selected Image</string>
    <string name="publish_products">Publish Products</string>
    <string name="money_naira_double_format">&#8358;%,.02f</string>
    <string name="new_arrival">NEW ARRIVAL</string>
    <string name="new_arrival_product">new_arrival_product</string>
    <string name="action_continue">Continue</string>
    <string name="view_receipt">View</string>
    <string name="categories">Categories</string>
    <string name="account">Account</string>
    <string name="order_now">Order Now</string>
    <string name="switch_account">Switch account</string>
    <string name="logout">Logout</string>
    <string name="action_stay">Stay</string>
    <string name="search_products">Search Products</string>
    <string name="cart">Cart</string>
    <string name="decrease_quantity">decrease</string>
    <string name="increase_quantity">increase</string>
    <string name="add_to_order">Add to Order</string>
    <string name="continue_to_order">Continue to Order</string>
    <string name="continue_to_cart">Continue to Cart</string>
    <string name="cart_product_image">Cart product image</string>
    <string name="cart_icon">cart icon</string>
    <string name="delete">Delete</string>
    <string name="total_payment">Total Payment</string>
    <string name="pay_now">Pay Now</string>
    <string name="paystack_public_key">pk_test_d36f30c7e99092576e56090ab264e449f14778eb</string>
    <string name="proceed_to_pay">Proceed to Pay</string>
    <string name="your_details_are_safe">Your details are safe</string>
    <string name="card_number">Card Number</string>
    <string name="asterics">**** **** **** **** **</string>
    <string name="expiry">Expiry</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="secured_by_paystack">Secured by Paystack</string>
    <string name="expiry_slash">%1$s/</string>
    <string name="expiry_space"> %1$s</string>
    <string name="dashes">____ - ____ - ____ - ____</string>
    <string name="enter_valid_date_mm_yy">Enter a valid expiry date</string>
    <string name="asterics_3">***</string>
    <string name="pay_amount">Pay</string>
    <string name="let_s_go_nchamp">Let\'s Go, \nCHAMP</string>
    <string name="loading_orders">Loading Orders</string>
    <string name="lunch">Lunch</string>
    <string name="breakfast">Breakfast</string>
</resources>