<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:layout_marginTop="@dimen/dimen_15"
    android:layout_marginBottom="8dp"
    android:background="@drawable/rounded_white_background_grey_border"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:orientation="horizontal">


    <ImageView
        android:id="@+id/cart_iv_logo"
        android:layout_width="90dp"
        android:layout_height="130dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/cart_product_image"
        tools:src="@drawable/stir_fry" />

    <TextView
        android:id="@+id/tv_cart_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/cart_iv_logo"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/spacing_middle"
        android:layout_toEndOf="@+id/cart_iv_logo"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:text="Cable TV" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_cart_product_name"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/spacing_middle"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/cart_iv_logo"
        android:textColor="@color/grey"
        android:textSize="16sp"
        tools:text="#2,000" />


    <LinearLayout
        android:id="@+id/product_quantity_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/dimen_20"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/tv_cart_product_name"
        android:gravity="end"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/cart_btn_minus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/decrease_quantity"
            android:scaleType="centerInside"
            android:src="@drawable/ic_minus" />


        <TextView
            android:id="@+id/tv_cart_item_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingStart="@dimen/dimen_12"
            android:paddingEnd="@dimen/dimen_12"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:text="1" />


        <ImageButton
            android:id="@+id/cart_btn_plus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/increase_quantity"
            android:scaleType="centerInside"
            android:src="@drawable/ic_plus" />
    </LinearLayout>

    <View
        android:id="@+id/v_space_two"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true" />
</RelativeLayout>