<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".core.user.orders.CompleteOrdersFragment">

        <LinearLayout
            android:id="@+id/ll_topbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/app_default_purple"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:contentInsetStartWithNavigation="0dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/toolbarStyle"
                app:titleTextColor="@color/white" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/second_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_topbar">

            <TextView
                android:id="@+id/breakfast_layout"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:fontFamily="@font/khula_bold"
                android:textAllCaps="true"
                android:text="@string/breakfast"
                android:contentDescription="@string/action_back"
                android:background="@color/medium_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lunch_layout"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:fontFamily="@font/khula_bold"
                android:textAllCaps="true"
                android:text="@string/lunch"
                android:contentDescription="@string/action_back"
                android:background="@color/medium_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/breakfast_layout" />

            <TextView
                android:id="@+id/dinner_layout"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:fontFamily="@font/khula_bold"
                android:textAllCaps="true"
                android:text="Dinner"
                android:contentDescription="@string/action_back"
                android:background="@color/medium_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lunch_layout" />




        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>